syntax = "proto3";

package workflows;

import "google/protobuf/timestamp.proto";
import "orders/orders.proto";
import "common/money.proto";

message WorkflowOrderRequest {
    string order_id = 1;
    string user_id = 2;
    orders.Asset asset = 3;
    money.Money price = 4;
}

enum WorkflowSignal {
  WORKFLOW_SIGNAL_UNSPECIFIED = 0;
  WORKFLOW_SIGNAL_CANCEL_ORDER = 1;
  WORKFLOW_SIGNAL_CONFIRM_ORDER = 2;
  WORKFLOW_SIGNAL_ORDER_DELIVERY_COMPLETE = 3;
}

message WorkflowConfirmOrderSignal {
  string order_id = 1;
  string payment_option_id = 2;
}

message WorkflowCancelOrderSignal {
  string order_id = 1;
}

message WorkflowOrderDeliveryCompleteSignal {
  string order_id = 1;
  DeliveryStatus status = 2;
  enum DeliveryStatus {
      DELIVERY_STATUS_UNSPECIFIED = 0;
      DELIVERY_STATUS_SUCCEEDED = 1;
      DELIVERY_STATUS_FAILED = 2;
}
  string failure_reason = 3;
}
